--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
 
                  <div id="main">
                  <table align="center" >
-                 <tr>
+                                 
+			 <tr>
+				 <td>
+				     <a href="https://Newchic.vip/13wlj"> <img src="10.jpg" width="300" height="400"> </a> 
+				 </td>
+				 <td>
+				     <a href="https://Newchic.vip/13wlm"> <img src="11.jpg" width="300" height="400"> </a> 
+				 </td>
+				 <td>
+				     <a href="https://Newchic.vip/13wlo"> <img src="12.jpg" width="300" height="400"> </a> 
+				 </td>
+				 </tr>
+			 <tr>
 				 <td>
   				      <a href="https://Newchic.vip/13w2K" > <img src="7.jpg" width="300" height="400"></a>
 				 </td>
