--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 
                  <div id="main">
                  <table align="center" >
+		 
+		 				 <tr>
+				 <td>
+				     <a href="https://Newchic.vip/13wxw"> <img src="13jpg" width="300" height="400"> </a> 
+				 </td>
+				 <td>
+				     <a href="https://Newchic.vip/13wxz"> <img src="14.jpg" width="300" height="400"> </a> 
+				 </td>
+				 <td>
+				     <a href="https://Newchic.vip/13wxB" width="300" height="400"> </a> 
+				 </td>
+				 </tr>
                                  
 			 <tr>
 				 <td>
