--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		 
 		 				 <tr>
 				 <td>
-				     <a href="https://Newchic.vip/13wxw"> <img src="13jpg" width="300" height="400"> </a> 
+				     <a href="https://Newchic.vip/13wxw"> <img src="13.jpg" width="300" height="400"> </a> 
 				 </td>
 				 <td>
 				     <a href="https://Newchic.vip/13wxz"> <img src="14.jpg" width="300" height="400"> </a> 
