--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
                  <table align="center" >
 		  <tr>
 				 <td>
-				     <a href="https://amzn.to/3ZLDZb9"> <img src="19.jpg" width="300" height="400"> </a> 
+				     <a href="https://amzn.to/3ZLDZb9"> <img src="19.jpg" width="800" height="auto"> </a> 
 				 </td>
+				 </tr>
 				 <td>
-				     <a href="https://amzn.to/3QMJUbW"> <img src="20.jpg" width="300" height="400"> </a> 
+				     <a href="https://amzn.to/3QMJUbW"> <img src="20.jpg" width="800" height="auto"> </a> 
 				 </td>
+				 </tr>
 				 <td>
-				     <a href="https://amzn.to/3XoHzqq"> <img src="21.jpg" width="300" height="400"> </a> 
+				     <a href="https://amzn.to/3XoHzqq"> <img src="21.jpg" width="800" height="auto"> </a> 
 				 </td>
 				 </tr>
 		 <tr>
