--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
                  <div id="main">
                  <table align="center" >
-		  <tr>
+		  				<tr>
 				 <td>
-				     <a href="https://amzn.to/3ZLDZb9"> <img src="19.jpg" width="800" height="auto"> </a> 
+				     <a href="https://amzn.to/3ZLDZb9"> <img src="19.jpg" width="500" height="400"> </a> 
+				 </td>
+				 
+				 <td>
+				     <a href="https://amzn.to/3QMJUbW"> <img src="20.jpg" width="500" height="400"> </a> 
 				 </td>
 				 </tr>
 				 <td>
-				     <a href="https://amzn.to/3QMJUbW"> <img src="20.jpg" width="800" height="auto"> </a> 
-				 </td>
-				 </tr>
-				 <td>
-				     <a href="https://amzn.to/3XoHzqq"> <img src="21.jpg" width="800" height="auto"> </a> 
+				     <a href="https://amzn.to/3XoHzqq"> <img src="21.jpg" width="800" height="400"> </a> 
 				 </td>
 				 </tr>
 		 <tr>
