--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
              </div>
 
                  <div id="main">
+	          <table align="center">
+					 <td>
+						 <a href="https://Newchic.vip/13wRA"> <img src="25.jpg" width="300" heigth="400"> </a>
+					 </td>
+					 <td>
+						 <a href="https://Newchic.vip/13wRB"> <img src="26.jpg" width="300" heigth="400"> </a>
+					 </td>
+					 <td>
+						 <a href="https://Newchic.vip/13wRD"> <img src="27.jpg"width="300" heigth="400"> </a>
+					 </td>
                 <table align="center" >
 				 <tr>
 				 <td>
