--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
              </div>
 
                  <div id="main">
+		 <table align="center">
+				     <td>
+					     <a href="https://Newchic.vip/13wWt"> <img src="28.jpg" width="300" height="400"> </a> 
+					 </td>
+					 <td>
+					     <a href="https://Newchic.vip/13wWx"> <img src="29.jpg" width="300" height="400"> </a> 
+					 </td>
+					 <td>
+					     <a href="https://Newchic.vip/13wWy"> <img src="30.jpg" width="300" height="400"> </a> 
+					 </td>
+				 </table>
 	          <table align="center">
 					 <td>
 						 <a href="https://Newchic.vip/13wRA"> <img src="25.jpg" width="300" heigth="400"> </a>
