--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
                  <div id="main">
 			 <table algin="center">
 	                 <td>
+					 <a href="https://Newchic.vip/13x6q"> <img src="34.jpg" width="300" height="400"> </a>
+                      </td>	
+                      <td>
+					 <a href="https://Newchic.vip/13x6r"> <img src="35.jpg" width="300" height="400"> </a>
+                      </td>	
+                            <td>
+					 <a href="https://Newchic.vip/13x6s"> <img src="36.jpg" width="300" height="400"> </a>
+                      </td>						  
+				  
+				 </table>
+			 <table algin="center">
+	                 <td>
 					 <a href="https://Newchic.vip/13x0H"> <img src="31.jpg" width="300" height="400"> </a>
                       </td>	
                       <td>
