--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
              </div>
 
                  <div id="main">
+		            <table>
+				     <td>
+					     <a href="https://Newchic.vip/13xt1"> <img src="43" width="300" height="400"> </a>
+					 </td>
+					 <td>
+					     <a href="https://Newchic.vip/13xt3"> <img src="44" width="300" height="400"> </a>
+					 </td>
+					 <td>
+					     <a href="https://Newchic.vip/13xt7"> <img src="45" width="300" height="400"> </a>
+					 </td>
+				 </table>
 		          <table algin="center">
 				     <td>
 						<a href="https://Newchic.vip/13xdh"> <img src="37.jpg" width="300" height="400"> </a>
