--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                  <div id="main">
 		            <table>
 				     <td>
-					     <a href="https://Newchic.vip/13xt1"> <img src="43" width="300" height="400"> </a>
+					     <a href="https://Newchic.vip/13xt1"> <img src="43.jpg" width="300" height="400"> </a>
 					 </td>
 					 <td>
-					     <a href="https://Newchic.vip/13xt3"> <img src="44" width="300" height="400"> </a>
+					     <a href="https://Newchic.vip/13xt3"> <img src="44.jpg" width="300" height="400"> </a>
 					 </td>
 					 <td>
-					     <a href="https://Newchic.vip/13xt7"> <img src="45" width="300" height="400"> </a>
+					     <a href="https://Newchic.vip/13xt7"> <img src="45.jpg" width="300" height="400"> </a>
 					 </td>
 				 </table>
 		          <table algin="center">
