--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
              </div>
 
                  <div id="main">
+			 <table>
+				 <td>
+				     <a href="https://Newchic.vip/13xBT"> <img src="46.jpg" width="300" height="400" > </a>
+				 </td>
+				 <td>
+				     <a href="https://Newchic.vip/13xC0"> <img src="47.jpg" width="300" height="400" > </a>
+				 </td>
+				 <td>
+				     <a href="https://Newchic.vip/13xC1"> <img src="48.jpg" width="300" height="400" > </a>
+				 </td>
+				 </table>
 		            <table>
 				     <td>
 					     <a href="https://Newchic.vip/13xt1"> <img src="43.jpg" width="300" height="400"> </a>
