--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 
                  <div id="main">
 			 <table>
+				    <td>
+					    <a href="https://Newchic.vip/13xKl"> <img src="49(3).jpg" width="300" height="400"> </a>
+					</td>
+					<td>
+					    <a href="https://Newchic.vip/13xKn"> <img src="50.jpg" width="300" height="400"> </a>
+					</td>
+					<td>
+					    <a href="https://Newchic.vip/13xKo"> <img src="51.jpg" width="300" height="400"> </a>
+					</td>
+			 </table>
+			 <table>
 				 <td>
 				     <a href="https://Newchic.vip/13xBT"> <img src="46.jpg" width="300" height="400" > </a>
 				 </td>
