--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
              <h2 align="right"> DID YOU KNOW ?  WE ARE <BR> ASSOCIATED MORE THAN 16+ <br> WEBSTORES COMBAINED ! <h2>
                  </div>
 				 <div id="season">
-             <br>  <h2> "JANUARY'S EXCLUSIVE" </h2> 
+             <br>  <h2> "FEBRUARY'S EXCLUSIVE" </h2> 
                   </div>
              </div>
 
                  <div id="main">
+			  <table>
+				     <td>
+					     <a href="https://Newchic.vip/13y88"> <img src="55.jpg" width="300" height="400"> </a>
+					 </td>
+					 <td>
+					     <a href="https://Newchic.vip/13y8b"> <img src="56.jpg" width="300" height="400"> </a>
+					 </td>
+					 <td>
+					     <a href="https://Newchic.vip/13y8c"> <img src="57.jpg" width="300" height="400"> </a>
+					 </td>
+				 </table>
 			 <table>
 				     <td>
 					     <a href="https://Newchic.vip/13xZn"> <img src="52.jpg" width="300" height="400"> </a>
